# WhatsApp-Bot

./: .env.example  .gitignore  Dockerfile  README.md  capture_demo.sh  docker-compose.yml  package.json  pyproject.toml  record_demo.sh  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/controllers/: __init__.py  admin_controller.py  auth_controller.py  whatsapp_controller.py
app/models/: __init__.py  base.py  family.py
app/routes/: __init__.py  admin.py  auth.py  whatsapp.py
app/services/: __init__.py  whatsapp_service.py
app/static/: index.html
app/utils/: auth.py  generate_sample_data.py
config/: settings.py
scripts/: sample_data.json
tests/: test_whatsapp.py
